@@ -1,3 +1,15 @@
+2021-07-27  Saagar Jha  <saagar@saagarjha.com>
+
+        Fix WebProcess sandbox profile when ENABLE_SANDBOX_MESSAGE_FILTER is disabled
+        https://bugs.webkit.org/show_bug.cgi?id=228220
+
+        Reviewed by Per Arne Vollan.
+
+        A couple of new filters turn into empty lists when ENABLE_SANDBOX_MESSAGE_FILTER is NO;
+        we shouldn't be evaluating them at all, so we need to move the check out.
+
+        * WebProcess/com.apple.WebProcess.sb.in: Factor the conditional check out of the filters.
+
 2021-07-26  Said Abou-Hallawa  <said@apple.com>
 
         Regulate the WebPage RenderingUpdates from the WebProcess to the GPUProcess
